--- a/test.html
+++ b/test.html
@@ -1,1 +1,37 @@
-Hola mundo!
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<script src="includes/assets/js/jquery-3.2.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="includes/assets/js/scripts.js" type="text/javascript" charset="utf-8"></script>
+		<link rel="stylesheet" href="style.css">
+		<title>Test</title>
+	</head>
+	<body>
+
+		<p>
+			<a href="hola.html">Clickeame!!!</a>
+		</p>
+
+		<div class="box-container">
+			<div class="box red-bg">
+				Click me!
+			</div>
+			<div class="box">
+				Click me!
+			</div>
+			<div class="box">
+				Click me!
+			</div>
+			<div class="box">
+				Click me!
+			</div>
+		</div>
+
+		<form action="">
+			<input type="text" name="name" id="">
+
+			<input type="submit" value="Enviar" id="">
+		</form>
+	</body>
+</html>
